Nav overflow on Vertical Layout #1149 resolved

--- a/src/scss/layout/_navbar.scss
+++ b/src/scss/layout/_navbar.scss
@@ -391,7 +391,7 @@ Navbar vertical
             z-index: $zindex-fixed;
             align-items: flex-start;
             @include transition(transform $transition-time);
-            overflow-x: auto;
+            overflow-x: hidden;
             padding: 0;
 
             &.navbar-right {
